--- a/front/package.json
+++ b/front/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "angular": "^1.8.2",
-    "angular-animate": "1.6.10",
+    "angular-animate": "1.7.2",
     "angular-cookies": "1.6.10",
     "angular-file-saver": "1.1.3",
     "angular-filter": "0.5.17",
@@ -25,15 +25,13 @@
     "angular-ui-tree": "2.22.6",
     "bootstrap-colorpicker": "2.5.3",
     "bootstrap-sass": "3.4.0",
-    "eonasdan-bootstrap-datetimepicker": "4.17.47",
-    "font-awesome": "4.7.0",
+    "core-js": "3.11.1",
+    "dotenv": "^8.2.0",
+    "jquery": "3.4.1",
     "jsonformatter": "0.6.0",
     "moment": "2.22.2",
     "moment-timezone": "0.5.31",
-    "ng-dialog": "1.4.0",
-    "core-js": "3.11.1",
-    "dotenv": "^8.2.0",
-    "jquery": "3.4.1"
+    "ng-dialog": "1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
@@ -46,15 +44,16 @@
     "eslint-config-airbnb-base": "14.2.0",
     "eslint-plugin-import": "2.21.2",
     "eslint-plugin-jasmine": "^4.1.2",
+    "file-loader": "^6.0.0",
     "html-loader": "^1",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "3.0.0",
     "mini-css-extract-plugin": "^1.5.1",
     "ncp": "2.0.0",
     "node-sass": "^4.14.1",
-    "resolve-url-loader": "2",
     "sass-loader": "^10",
     "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "4.43.0",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0"
