--- a/api/.env
+++ b/api/.env
@@ -1,2 +1,8 @@
 PORT = 3000
 NODE_ENV = 'development'
+DB_URL = 'postgres://localhost/movies-plus-test'
+
+DB_HOST = '127.0.0.1'
+DB_USER = 'postgres'
+DB_PASSWORD = 'inspect'
+DB_DATABASE = 'movies-plus-test'
