--- a/front/.eslintrc.json
+++ b/front/.eslintrc.json
@@ -23,10 +23,14 @@
     "no-console": "off",
     "semi": "error",
     "no-unused-vars": ["warn", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }],
-    "arrow-body-style": ["error", "always"],
     "no-param-reassign": ["error", { "props": false }],
     "no-useless-escape": "off",
     "max-len": ["error", { "code": 200 }],
-    "no-use-before-define": ["error", { "functions": false, "classes": false }]
+    "no-use-before-define": ["error", { "functions": false, "classes": false }],
+    "brace-style": ["error", "stroustrup", { "allowSingleLine": true }],
+    "arrow-body-style": ["error", "as-needed"],
+    "object-curly-newline": ["error", { "multiline": true }],
+    "comma-dangle": ["error", "never"],
+    "arrow-parens": [2, "as-needed", { "requireForBlockBody": true }]
   }
 }
