--- a/api/package.json
+++ b/api/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "concessionaire-api",
+  "name": "movies-plus-api",
   "version": "1.0.0",
-  "description": "API Concessionaire application",
+  "description": "API Movies application",
   "main": "app.js",
   "scripts": {
     "start": "nodemon app",
-    "test:once": "jest",
-    "test": "jest --watch",
+    "migrate": "knex migrate:latest",
+    "unmigrate": "knex migrate:rollback",
+    "seed": "knex seed:run",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "axios": "0.19.2",
-    "bunyan": "1.8.12",
     "command-line-args": "^5.1.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -26,22 +26,20 @@
     "knex": "^0.95.4",
     "md5": "^2.3.0",
     "morgan": "^1.10.0",
-    "sqlite3": "^5.0.2"
+    "multer": "^1.4.2",
+    "pg": "^8.6.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@types/find": "^0.2.1",
-    "@types/jest": "26.0.3",
     "eslint": "7.2.0",
     "eslint-config-airbnb-base": "14.2.0",
     "eslint-plugin-import": "2.21.2",
-    "eslint-plugin-jest": "^23.15.0",
     "find": "^0.3.0",
-    "jest": "26.0.1",
-    "nodemon": "2.0.4",
-    "supertest": "4.0.2"
+    "nodemon": "2.0.4"
   },
   "keywords": [
-    "concessionaire",
+    "movies",
     "api"
   ],
   "author": "Sebastián López",
