--- a/front/package.json
+++ b/front/package.json
@@ -11,7 +11,7 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "angular": "^1.8.2",
+    "angular": "1.6.10",
     "angular-animate": "1.7.2",
     "angular-cookies": "1.6.10",
     "angular-file-saver": "1.1.3",
@@ -31,7 +31,11 @@
     "jsonformatter": "0.6.0",
     "moment": "2.22.2",
     "moment-timezone": "0.5.31",
-    "ng-dialog": "1.4.0"
+    "ng-dialog": "1.4.0",
+    "ng-file-upload": "12.2.13",
+    "ng-notify": "^0.7.1",
+    "ngstorage": "0.3.11",
+    "ui-select": "0.19.8"
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
