--- a/api/.env
+++ b/api/.env
@@ -1,6 +1,6 @@
 PORT = 3000
 NODE_ENV = 'development'
-FILE_STORAGE_PATH = 'public/uploads';
+FILE_STORAGE_PATH = 'public/uploads'
 DB_URL = 'postgres://localhost/movies-plus-test'
 
 DB_HOST = '127.0.0.1'
